# starfleet-parachain

./: Cargo.toml  README.md  compile.error  rust-toolchain.toml
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/evm-accounts/: Cargo.toml
pallets/evm-accounts/src/: lib.rs  mock.rs  tests.rs
pallets/evm-utility/: Cargo.toml
pallets/parachain-staking/: Cargo.toml  README.md
pallets/parachain-staking/src/: auto_compound.rs  benchmarks.rs  delegation_requests.rs  inflation.rs  lib.rs  migrations.rs  mock.rs  set.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/xc-asset-config/: Cargo.toml
pallets/xc-asset-config/src/: lib.rs  migrations.rs  mock.rs  tests.rs
precompiles/assets-erc20/: Cargo.toml
precompiles/assets-erc20/src/: lib.rs  mock.rs  tests.rs
precompiles/utils/: Cargo.toml
precompiles/utils/macro/src/: lib.rs
precompiles/utils/macro/tests/: tests.rs
precompiles/utils/src/: lib.rs  testing.rs  tests.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs  xcm_config.rs
runtime/src/weights/: mod.rs  pallet_parachain_staking.rs  pallet_xcm.rs
scripts/zombienet/: local_neuroweb.toml
